--- a/public/register.html
+++ b/public/register.html
@@ -21,6 +21,11 @@
                            class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
                 </div>
                 <div class="mb-4">
+                    <label class="block text-gray-700 mb-2">contact number</label>
+                    <input type="tel" name="mobile" required 
+                           class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
+                </div>
+                <div class="mb-4">
                     <label class="block text-gray-700 mb-2">Password</label>
                     <input type="password" name="password" required 
                            class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
