--- a/public/register.html
+++ b/public/register.html
@@ -34,9 +34,11 @@
                 </button>
                 <div class="mb-4">
                     <label>OTP</label>
-                    <input type="tel" name="otp" required class="border w-full px-4 py-2 rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
+                    <input id="otp" type="tel" name="otp" required class="border w-full px-4 py-2 rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
                 </div>
-
+                <button id="verify" class="bg-blue-300 w-full py-2 px-4 text-white rounded hover:bg-blue-500 ">
+                    verify otp 
+                </button>
                 <button type="submit" class="w-full bg-green-500 text-white py-2 px-4 rounded hover:bg-green-600">
                     Register
                 </button>
@@ -44,7 +46,6 @@
             <p class="mt-4 text-center">Already have an account? <a href="login.html" class="text-blue-500">Login here</a></p>
             <p id="message"></p>
             <p id="otpsection"></p>
-
         </div>
     </div>
     <script>
@@ -59,16 +60,32 @@
                 body: JSON.stringify({ email: email })
             })
             .then(response => response.json())
-            .then(data => {
-                document.getElementById('message').textContent = data.message;
-                document.getElementById('otpsection').style.display = 'block';
-                document.getElementById('message').innerHTML += `<br>OTP: ${data.otp}`; // Display OTP for testing
-            })
             .catch(error => {
                 console.error('Error:', error);
             });
         }
-    )
+        )
+        document.getElementById('verify').addEventListener('click',function (e){
+            e.preventDefault();
+            const otp = document.getElementById('otp').value;
+            const email = document.getElementById('email').value;
+            console.log(otp,email);
+            fetch('./php/verifyotp.php', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({ otp: otp, email: email })
+            })
+            .then(response => response.json())
+            .then(data => { 
+                document.getElementById('message').textContent = data.message;
+                document.getElementById('otpsection').style.display = 'none';
+            })
+            .catch(error => {
+                console.error('Error:', error);
+            });
+        })
     </script>
 </body>
 </html>
