--- a/public/login.html
+++ b/public/login.html
@@ -12,7 +12,7 @@
             <form action="php/login.php" method="POST">
                 <div class="mb-4">
                     <label class="block text-gray-700 mb-2">Username or Email</label>
-                    <input type="text" name="username" required 
+                    <input id="username" type="text" name="username" required 
                            class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
                 </div>
                 <div class="mb-4">
@@ -20,12 +20,18 @@
                     <input type="password" name="password" required 
                            class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
                 </div>
-                <button type="submit" class="w-full bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-600">
+                <button id="login" type="submit" class="w-full bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-600">
                     Login
                 </button>
             </form>
             <p class="mt-4 text-center">Don't have an account? <a href="register.html" class="text-blue-500">Register here</a></p>
         </div>
     </div>
+    <script>
+        document.getElementById('login').addEventListener('click', function () {
+        const username = document.getElementById("username").value;
+        localStorage.setItem("username", username);
+    });
+    </script>
 </body>
 </html>
