--- a/public/register.html
+++ b/public/register.html
@@ -12,12 +12,12 @@
             <form action="php/register.php" method="POST">
                 <div class="mb-4">
                     <label class="block text-gray-700 mb-2">Username</label>
-                    <input type="text" name="username" required 
+                    <input id="username" type="text" name="username" required 
                            class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
                 </div>
                 <div class="mb-4">
                     <label class="block text-gray-700 mb-2">Organisation</label>
-                    <input type="text" name="Organisation_name" required class="border w-full px-3 py-2 rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
+                    <input id="organisation_name" type="text" name="Organisation_name" required class="border w-full px-3 py-2 rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
                 </div>
                 <div class="mb-4">
                     <label class="block text-gray-700 mb-2">Email</label>
@@ -26,29 +26,31 @@
                 </div>
                 <div class="mb-4">
                     <label class="block text-gray-700 mb-2">Password</label>
-                    <input type="password" name="password" required 
+                    <input id="password" type="password" name="password" required 
                            class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2  focus:ring-blue-500">
                 </div>
                 <button id="otp-send" class="bg-blue-300 w-full py-2 px-4 text-white rounded hover:bg-blue-500 ">
                     send otp 
                 </button>
-                <div class="mb-4">
+                <div class="mb-4 hidden" id="otpsection">
                     <label>OTP</label>
                     <input id="otp" type="tel" name="otp" required class="border w-full px-4 py-2 rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
                 </div>
-                <button id="verify" class="bg-blue-300 w-full py-2 px-4 text-white rounded hover:bg-blue-500 ">
+                <button id="verify" class="bg-blue-300 w-full py-2 px-4 text-white rounded hover:bg-blue-500 hidden" id="verify">
                     verify otp 
                 </button>
-                <button type="submit" class="w-full bg-green-500 text-white py-2 px-4 rounded hover:bg-green-600">
+                <!-- <button type="submit" class="w-full bg-green-500 text-white py-2 px-4 rounded hover:bg-green-600">
                     Register
-                </button>
+                </button> -->
             </form>
             <p class="mt-4 text-center">Already have an account? <a href="login.html" class="text-blue-500">Login here</a></p>
             <p id="message"></p>
-            <p id="otpsection"></p>
+            <p id="register-message"></p>
+            <p id="otp-section"></p>
         </div>
     </div>
     <script>
+
         document.getElementById('otp-send').addEventListener('click',function (e){
             e.preventDefault();
             const email = document.getElementById('email').value;
@@ -63,12 +65,18 @@
             .catch(error => {
                 console.error('Error:', error);
             });
+            document.getElementById('otp-send').classList.add('hidden');
+            document.getElementById('otpsection').classList.remove('hidden');
+            document.getElementById('verify').classList.remove('hidden');
         }
         )
         document.getElementById('verify').addEventListener('click',function (e){
             e.preventDefault();
             const otp = document.getElementById('otp').value;
             const email = document.getElementById('email').value;
+            const username = document.getElementById('username').value;
+            const organisation_name = document.getElementById('organisation_name').value;
+            const password = document.getElementById('password').value;
             console.log(otp,email);
             fetch('./php/verifyotp.php', {
                 method: 'POST',
@@ -80,12 +88,31 @@
             .then(response => response.json())
             .then(data => { 
                 document.getElementById('message').textContent = data.message;
-                document.getElementById('otpsection').style.display = 'none';
+                document.getElementById('otp-section').style.display = 'none';
             })
             .catch(error => {
                 console.error('Error:', error);
             });
+            fetch('./php/register.php',{
+                method:'POST',
+                headers:{
+                    'Content-Type':'application/json'
+                },
+                body:JSON.stringify({username:username,Organisation_name:organisation_name,email:email,password:password})
+            })
+            .then(response => response.json())
+            .then(data => {
+                document.getElementById('register-message').textContent = data.message;
+                if (data.success) {
+                 window.location.href = "dashboard.html"; // Redirect on success
+                }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+            });
+            localStorage.setItem("username", username);
         })
     </script>
+
 </body>
 </html>
